--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software Dev</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/sravnigithub/portfolio/main/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -31,10 +31,10 @@
             <h1>CHITRADA SRAVANI</h1>
             <p>A software developer is an architect of possibility, turning ideas into reality through code, logic, and creativity.</p>
             <div class="social-links">
-    <a href="#" class="https://github.com/sravnigithub"><img src="/home/sravani/Desktop/github.png" alt="GitHub" class="social-logo"></a>
-    <a href="#" class="https://linkedin.com/in/sravani-chitrada-717695257"><img src="/home/sravani/Desktop/linkedin.png" alt="LinkedIn" class="social-logo"></a>
-    <a href="#" class="https://www.instagram.com/sravanichitrada"><img src="/home/sravani/Desktop/instagram.png" alt="Instagram" class="social-logo"></a>
-    <a href="#" class="sravanichitrada03@gmail.com"><img src="/home/sravani/Desktop/mail.png" alt="Email" class="social-logo"></a>
+    <a href="https://github.com/sravnigithub"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/github.png" alt="GitHub"></a>
+                <a href="https://linkedin.com/in/sravani-chitrada-717695257"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/sravanichitrada"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/instagram.png" alt="Instagram"></a>
+                <a href="mailto:sravanichitrada03@gmail.com"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/mail.png" alt="Email"></a>
 </div>
 
 
@@ -46,7 +46,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/home/sravani/Downloads/Sravani/Personal/Sravani.jpeg" alt="Profile">
+                    <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/Sravani.jpeg" alt="Profile">
                 </div>
                 <div class="about-text">
                     <p>A detail-oriented BTech student in Information Technology with strong problem-solving skills and a solid academic foundation.
@@ -126,7 +126,7 @@ effectively.</p>
             <h2>Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="/home/sravani/Desktop/results.jpeg" alt="Project 1">
+                    <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/results.jpeg" alt="Project 1">
                     <h3>Academic Results Management System</h3>
                     <p>Developed a backend system using PHP for managing academic result pages, ensuring secure database interactions, dynamic content rendering, and efficient CRUD operations for student records.</p>
                     <div class="tags">
@@ -135,7 +135,7 @@ effectively.</p>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="/home/sravani/Desktop/faculty.jpeg" alt="Project 2">
+                    <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/faculty.jpeg" alt="Project 2">
                     <h3>Faculty Management</h3>
                     <p>Developed a system for efficient faculty record management using JDBC and MySQL, automating CRUD operations to ensure data integrity and streamline administrative tasks.</p>
                     <div class="tags">
@@ -145,7 +145,7 @@ effectively.</p>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="/home/sravani/Desktop/AI.png" alt="Project 3">
+                    <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/AI.png" alt="Project 1">
                     <h3>AI-Based Map-Matching for Vehicle Movement Classification</h3>
                     <p>Developed a map-matching algorithm using AI/ML to classify vehicular movement on highways and service roads, leveraging Python for data preprocessing and R for Decision Tree modeling.</p>
                     <div class="tags">
@@ -165,16 +165,16 @@ effectively.</p>
         <p>I'm always open to discussing new projects and opportunities.</p>
 
         <p>
-            <img src="/home/sravani/Desktop/phone.png" alt="Phone Icon" class="icon"> 
+            <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/phone.png"  alt="Phone Icon" class="icon"> 
             Phone: +91-9347169272
         </p>
         <p>
-            <img src="/home/sravani/Desktop/location.png" alt="Location Icon" class="icon"> 
+            <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/location.png" alt="Location Icon" class="icon"> 
             Address: Paul Nagar, Vizianagaram, Andhra Pradesh
         </p>
 
         <a href="mailto:sravanichitrada03@gmail.com" class="contact-button">
-            <img src="/home/sravani/Desktop/mail.png" alt="Email Icon" class="icon"> Email Me
+            <img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/mail.png" alt="Email Icon" class="icon"> Email Me
         </a>
     </div>
 </section>
@@ -186,7 +186,7 @@ effectively.</p>
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/script.js"></script>
 </body>
 </html>
 
