--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@ effectively.</p>
                 <p>Issued by Brainovision Pvt Ltd, 2024</p>
             </div>
             <div class="certification-card">
+                <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank">
+                            Python Full Stack Certification
+                        </a>
                 <h3>Python Full Stack Certification</h3>
                 <p>Issued by Infosys Spring Board, 2024</p>
             </div>
