--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ effectively.</p>
         <h2>Certifications</h2>
         <div class="certifications-content">
             <div class="certification-card">
+                <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank" class="certification-card">
                 <h3>Java Full Stack Intern</h3>
                 <p>Issued by Brainovision Pvt Ltd, 2024</p>
             </div>
             <div class="certification-card">
                 <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank">
-                            Python Full Stack Certification
                         </a>
                 <h3>Python Full Stack Certification</h3>
                 <p>Issued by Infosys Spring Board, 2024</p>
