--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ effectively.</p>
         <h2>Certifications</h2>
         <div class="certifications-content">
             <div class="certification-card">
-                <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank" class="certification-card">
+                <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank" class="certification-card"></a>
                 <h3>Java Full Stack Intern</h3>
                 <p>Issued by Brainovision Pvt Ltd, 2024</p>
             </div>
