--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ effectively.</p>
         <h2>Certifications</h2>
         <div class="certifications-content">
             <div class="certification-card">
-                <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank" class="certification-card"></a>
+                <a href="https://drive.google.com/file/d/19p_pywNMl6tnPVXymKMDr-UuNZodvv-c/view?usp=sharing" target="_blank"></a>
                 <h3>Java Full Stack Intern</h3>
                 <p>Issued by Brainovision Pvt Ltd, 2024</p>
             </div>
@@ -117,6 +117,7 @@ effectively.</p>
                 <p>Issued by Infosys Spring Board, 2024</p>
             </div>
             <div class="certification-card">
+                <a href="https://drive.google.com/file/d/1scUQJkKEpSbQPGhm5O1AMj3-emWygDTh/view?usp=sharing" target="_blank"></a>
                 <h3>Python,DSA through C,HTML,CSS,SQL</h3>
                 <p>Issued by Prepinsta, 2023</p>
             </div>
