--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>CHITRADA SRAVANI</h1>
             <p>A software developer is an architect of possibility, turning ideas into reality through code, logic, and creativity.</p>
             <div class="social-links">
-    <a href="https://github.com/sravnigithub"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/github.png" alt="GitHub"></a>
+    <a href="https://www.flaticon.com/free-icons/instagram" title="instagram icons" alt="GitHub"></a>
                 <a href="https://linkedin.com/in/sravani-chitrada-717695257"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/linkedin.png" alt="LinkedIn"></a>
                 <a href="https://www.instagram.com/sravanichitrada"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/instagram.png" alt="Instagram"></a>
                 <a href="mailto:sravanichitrada03@gmail.com"><img src="https://raw.githubusercontent.com/sravnigithub/portfolio/main/mail.png" alt="Email"></a>
